static/styles/zulip.css
/* ... */
.date_row span:before {
    right: 0.5em;
    margin-left: -50%;
}

.date_row span:after {
    left: 0.5em;
    margin-right: -50%;
}

.include-sender .message_edit {
    margin-top: -14px;
}

.message_edit {
    display: none;
    margin-top: 5px;
    margin-left: 47px;
}

/* Reduce some of the heavy padding from Bootstrap. */
#message_edit_form {
    margin-bottom: 10px;
}
#message_edit_form .edit-control-label {
    vertical-align: top;
    padding-top: 0px;
    margin-right: 10px;
    font-size: 80%;
}
#message_edit_form .edit-controls {
    margin-left: 0px;
    margin-top: 0px;
}
#message_edit_form textarea {
    width: 100%;
    min-width: 206px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
#message_edit_form .control-group.no-margin {
    margin-bottom: 0px;
}

#message_edit_form a.message-control-button {
    display: inline;
    color: #777;
    text-decoration: none;
    font-size: 12px;
    width: 12px;
    height: 14px;
    text-align: center;
    float: right;
    padding-left: 5px;
    padding-top: 3px;
}

#message_edit_form .action-buttons {
    margin: 10px 0px;
}

#topic_edit_form {
    display: inline-block;
    margin: 0 0 0 0;
    height: 22px;
    background: #e2e2e2;
    padding-left: 20px;
    padding-right: 3px;
    line-height: 22px;
    margin-left: -15px;
}

.message_body_gravatar {
    width: 20px;
    height: 20px;
    margin: 2px 2px 2px 0px;
    vertical-align: text-bottom;
}

.user-mention {
    background-color: #eee;
    border-radius: 3px;
    padding: 0 0.2em;
    box-shadow: 0px 0px 0px 1px #ccc;
    margin-right: 2px;
    white-space: nowrap;
    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0)));
    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: -o-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    display: inline-block;
    margin-bottom: 1px;
}

.user-mention-me {
    background-color: #c9fcc1;
}

.alert-word {
    background-color: #c9fcc1;
}

#administration h1,
#settings h1 {
    font-size: 25px;
    font-weight: 300;
}

#administration .administration-icon,
#settings .settings-icon {
    margin-right: 10px;
    font-size: 20px;
}

#home {
    margin-top: 41px;
}

.message-pane {
    padding-left: 0.3em;
}

.screen {
    position: absolute;
    left: 0;
    top: 0;
    background: #000;
    z-index: 20000;
}

#tutorial-stream {
    width: 250px;
}

#tutorial-subject {
    width: 250px;
}

.tutorial-done-button {
    text-align: right;
    margin-top: 9px;
    margin-bottom: 8px;
}

.btn-skip {
    position: relative;
    left: -10px;
    margin-right: 25px;
}

.deactivated_user .user_name,
.deactivated_user .email {
    text-decoration: line-through;
}

.admin-menu-item {
    display: none;
}

/* embed */
.message_content .message_embed {
    display: block;
    position: relative;
    margin: 5px 0px;
    border: none;
    border-left: 3px solid #eee;
    height: 70px;
    padding: 5px;
    z-index: 1;
}

.message_content .message_embed > * {
    display: inherit;
    padding: 5px;
    border: none;
}

.message_embed .message_embed_title {
    padding-top: 0px;
    /* to remove the spacing that the font has from the top of the container. */
    margin-top: -1px;

    font-size: 1em;
    font-weight: 600;
    line-height: normal;
}

.message_embed .message_embed_description {
    position: relative;
    margin-top: -5px;
    max-width: 500px;

    /* to put it below the container gradient. */
    z-index: -1;
}

.message_embed .message_embed_image {
    display: inline-block;
    width: 60px;
    height: 60px;
    background-size: cover;
    background-position: center;
}

.message_embed .data-container {
    padding: 0px 5px;
    display: inline-block;
    vertical-align: top;
    max-width: calc(100% - 115px);
    max-height: 70px;
    overflow: hidden;
}

.message_embed .data-container div {
    display: block;
    border: none;
}

@media (max-width: 600px) {
    .message_content .message_embed {
        height: auto;
    }

    .message_embed .message_embed_image {
        width: 100%;
        height: 100px;
    }

    .message_embed .data-container {
        display: block;
        max-width: 100%;
        margin-top: 10px;
    }
}

ul.sender_info_popover i {
    display: inline-block;
    width: 14px;
    text-align: center;
    margin-right: 3px;
}

